# url-shortener

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  ROADMAP.md  flake.nix
.github/workflows/: ci.yml  deploy-frontend.yml  deploy-lambdas.yml  promote-to-prod.yml
.junie/: guidelines.md
.junie/memory/: errors.md  feedback.md  tasks.md
adapters/aws-dynamo/: Cargo.toml
adapters/aws-dynamo/src/: lib.rs
adapters/google-auth/: Cargo.toml
adapters/google-auth/src/: lib.rs
adapters/sqlite-adapter/: Cargo.toml
adapters/sqlite-adapter/src/: lib.rs
admin-frontend/: app.js  config.js  index.html  package-lock.json  package.json
apps/api-server/: Cargo.toml
apps/api-server/src/: config.rs  main.rs
apps/lambda-admin/: Cargo.toml
apps/lambda-admin/src/: main.rs
apps/lambda-redirect/: Cargo.toml
apps/lambda-redirect/src/: main.rs
docs/: deployment-guide-aws.md  design-and-implementationplan.txt  design-plan.md  implementation-plan.md  junie-implementation-plan-remaining.md  junie-implementation-plan.md  phase-11-iac-plan.md  spec_admin_api.md  spec_phase_10_lambda_apps.md
docs/diagrams/: aws-implementation.puml
docs/plans/: us-020-refactoring.md
domain/: Cargo.toml
domain/src/: base62.rs  lib.rs  main.rs  service.rs  slug.rs  validate.rs
domain/src/adapters/: memory_repo.rs  mod.rs
infra/sam/: samconfig.toml.example  template.yaml
shared/http-common/: Cargo.toml
shared/http-common/src/: lib.rs
