[package]
name = "google-auth"
version = "0.1.0"
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json = "1.0"
base64 = { version = "0.22", default-features = false, features = ["std"] }
tracing.workspace = true
thiserror = "2.0"
jsonwebtoken = "9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
rsa = "0.9"
rand = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
