[package]
name = "api-server"
version = "0.1.0"
edition.workspace = true

[dependencies]
axum = "0.7"
hyper = { version = "1", features = ["client", "http1", "http2"] }
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
serde_json = "1.0"
tower = "0.5"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tower-http = { version = "0.5", features = ["trace", "cors", "request-id"] }
uuid = { version = "1.0", features = ["v4"] }

domain = { path = "../../domain" }
google-auth = { path = "../../adapters/google-auth" }
http-common = { path = "../../shared/http-common" }
sqlite-adapter = { path = "../../adapters/sqlite-adapter", optional = true }
chrono = { version = "0.4", features = ["clock"] }

# Optional Dynamo adapter dependency; enabled via the `dynamo` feature
aws-dynamo = { path = "../../adapters/aws-dynamo", optional = true }

[features]
default = ["sqlite"]
dynamo = ["aws-dynamo"]
sqlite = ["sqlite-adapter"]
