[package]
name = "lambda-admin"
version = "0.1.0"
edition.workspace = true

[dependencies]
domain = { path = "../../domain" }
aws-dynamo = { path = "../../adapters/aws-dynamo" }
google-auth = { path = "../../adapters/google-auth" }
http-common = { path = "../../shared/http-common", features = ["lambda"] }
lambda_http = "1.0.1"
http = "1"
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
base64 = { version = "0.22", default-features = false, features = ["std"] }
tokio.workspace = true
chrono = { version = "0.4", features = ["clock"] }
urlencoding = "2"

[dev-dependencies]